--- a/sde_design/mobile1/_wg/css/additional.css
+++ b/sde_design/mobile1/_wg/css/additional.css
@@ -10,10 +10,10 @@
 .xans-product-additional .faq .toggle.disable > .contents { display:block; }
 
 .xans-product-additional { margin:0; padding:0; background:#fff; }
-.xans-product-additional #prdDetail { position:relative; }
+.xans-product-additional #prdDetail { position:relative; box-sizing: border-box; padding: 5px; }
 .xans-product-additional #prdDetail .button { text-align:center; padding:12px 0; }
 .xans-product-additional #prdDetail .ico { position:relative; top:2px; display:inline-block; width:13px; height:13px; background-image:url("http://img.echosting.cafe24.com/skin/mobile_ko_KR/product/ico_expand.png"); background-size:13px 13px; }
-.xans-product-additional #prdDetail img { position:relative; width:100%; height:auto; }
+.xans-product-additional #prdDetail img { position:relative; width:100%; height:auto; margin: 0; }
 .xans-product-additional .btnMore { position:relative; margin:0 auto; width:100%; }
 .xans-product-additional .btnMore a { display:block; padding:12px 0; border-top:1px solid #f1f1f1; border-bottom:1px solid #d5d5d5; color:#757575; text-align:center; font-weight:bold; background:#f5f5f5; }
 .xans-product-additional .btnMore span.icoMore { display:inline-block; margin:0 0 0 8px; width:12px; height:7px; font-size:0; line-height:0; vertical-align:middle; background:url("http://img.echosting.cafe24.com/skin/mobile_ko_KR/layout/btn_more.gif") no-repeat 50% 50%; background-size:12px 7px; }
