--- a/sde_design/skin6/layout/basic/layout.html
+++ b/sde_design/skin6/layout/basic/layout.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=1440, user-scalable=yes"/>
 	<meta name="format-detection" content="telephone=no">
+	<meta name="facebook-domain-verification" content="0x3wahyp36y2l5ctyfgxect7afaq5t" />
 	<meta property="og:image" content="https://www.moonhillfood.com/common/zenatea.png"/>
 
     <!--PG크로스브라우징필수내용 시작-->
